--- a/src/styles/media-queries.scss
+++ b/src/styles/media-queries.scss
@@ -185,7 +185,7 @@
     }
 
     .grid-container {
-      grid-template-columns: minmax(200px, 1fr) !important;
+      grid-template-columns: 200px !important;
     }
   }
 }
